宿光耀： 1.用分组的tableview布局“我”页面 2.头像部分，自定义cell，手动设置frame 3.实现“我”列表展示

--- a/rufangrongke/rufangrongke/Classes/wo/Controller/WXZWoController.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/WXZWoController.xib
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WXZWoController">
             <connections>
+                <outlet property="myTableView" destination="sgO-d7-KMf" id="IC7-0S-eml"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -13,7 +15,19 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="sgO-d7-KMf">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                </tableView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="sgO-d7-KMf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="3LC-CZ-07N"/>
+                <constraint firstAttribute="trailing" secondItem="sgO-d7-KMf" secondAttribute="trailing" id="ENs-zl-Cid"/>
+                <constraint firstItem="sgO-d7-KMf" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="R1n-pr-PrS"/>
+                <constraint firstAttribute="bottom" secondItem="sgO-d7-KMf" secondAttribute="bottom" id="ZKu-ob-HMN"/>
+            </constraints>
         </view>
     </objects>
 </document>
