--- a/rufangrongke/rufangrongke/Classes/wo/View/WXZWoListCell.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/View/WXZWoListCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="WoListCell" rowHeight="55" id="KGk-i7-Jjw" customClass="WXZWoListCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="WoListCell" rowHeight="55" id="KGk-i7-Jjw" customClass="WXZWoListCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -16,25 +16,25 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c6c-Dp-VvU">
-                        <rect key="frame" x="10" y="17" width="20" height="20"/>
+                        <rect key="frame" x="10" y="16" width="22" height="22"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="20" id="Qrk-TD-mX0"/>
+                            <constraint firstAttribute="width" constant="22" id="Qrk-TD-mX0"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pyl-6f-Wqk">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pyl-6f-Wqk">
                         <rect key="frame" x="40" y="16" width="203" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="c6c-Dp-VvU" secondAttribute="bottom" constant="17" id="0kJ-He-X5J"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="Pyl-6f-Wqk" secondAttribute="trailing" constant="69" id="50M-ms-PLQ"/>
-                    <constraint firstItem="Pyl-6f-Wqk" firstAttribute="leading" secondItem="c6c-Dp-VvU" secondAttribute="trailing" constant="10" id="6Kv-Vb-hg6"/>
+                    <constraint firstAttribute="bottom" secondItem="c6c-Dp-VvU" secondAttribute="bottom" constant="16" id="0kJ-He-X5J"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Pyl-6f-Wqk" secondAttribute="trailing" constant="36" id="50M-ms-PLQ"/>
+                    <constraint firstItem="Pyl-6f-Wqk" firstAttribute="leading" secondItem="c6c-Dp-VvU" secondAttribute="trailing" constant="8" id="6Kv-Vb-hg6"/>
                     <constraint firstAttribute="bottom" secondItem="Pyl-6f-Wqk" secondAttribute="bottom" constant="17" id="Djo-wS-LAt"/>
                     <constraint firstItem="Pyl-6f-Wqk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="cgh-0f-hCI"/>
-                    <constraint firstItem="c6c-Dp-VvU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="pVM-tS-l31"/>
+                    <constraint firstItem="c6c-Dp-VvU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="pVM-tS-l31"/>
                     <constraint firstItem="c6c-Dp-VvU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="pmz-lJ-8wg"/>
                 </constraints>
             </tableViewCellContentView>
