宿光耀： 1.搭建“客户界面” 2.优化“我”界面和代码 3.搭建“个人资料”界面

--- a/rufangrongke/rufangrongke/Classes/wo/View/WXZWoHeadCell.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/View/WXZWoHeadCell.xib
@@ -47,7 +47,7 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_ certification" translatesAutoresizingMaskIntoConstraints="NO" id="9TQ-23-gzX">
+                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_ certification" translatesAutoresizingMaskIntoConstraints="NO" id="9TQ-23-gzX">
                         <rect key="frame" x="217" y="158" width="29" height="12"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="12" id="SNd-9x-mB3"/>
