--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZKHListHeaderView.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZKHListHeaderView.xib
@@ -29,6 +29,7 @@
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="0.18431372549019609" green="0.71764705882352942" blue="0.18431372549019609" alpha="1" colorSpace="calibratedRGB"/>
+            <gestureRecognizers/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="0Cp-Py-7ki" secondAttribute="trailing" constant="12" id="6zc-Vw-Cfa"/>
                 <constraint firstItem="4ko-uy-ga4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="884-K5-u7w"/>
