--- a/rufangrongke/rufangrongke/Classes/wo/View/WXZPersonalDataCell.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/View/WXZPersonalDataCell.xib
@@ -16,16 +16,17 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="上传正式头像，客户联系您的记录更高哦～" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DhT-Jk-oYb">
-                        <rect key="frame" x="70" y="17" width="155" height="40"/>
+                        <rect key="frame" x="70" y="17" width="140" height="40"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="9mj-NW-3fZ"/>
-                            <constraint firstAttribute="width" constant="155" id="TNg-Fh-yhb"/>
+                            <constraint firstAttribute="width" constant="140" id="TNg-Fh-yhb"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personaldata_ head" translatesAutoresizingMaskIntoConstraints="NO" id="R2K-be-RIM">
+                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personaldata_head" translatesAutoresizingMaskIntoConstraints="NO" id="R2K-be-RIM">
                         <rect key="frame" x="271" y="6" width="63" height="63"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="63" id="OC2-sO-FIN"/>
@@ -62,6 +63,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="wo_personaldata_ head" width="57" height="58"/>
+        <image name="wo_personaldata_head" width="57" height="58"/>
     </resources>
 </document>
