--- a/rufangrongke/rufangrongke/Classes/loupan/View/WXZTableViewCell.xib
+++ b/rufangrongke/rufangrongke/Classes/loupan/View/WXZTableViewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="109" id="KGk-i7-Jjw" customClass="WXZTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="loupanleibiaoCell" rowHeight="109" id="KGk-i7-Jjw" customClass="WXZTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="449" height="109"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -126,11 +126,5 @@
             </connections>
             <point key="canvasLocation" x="369.5" y="345.5"/>
         </tableViewCell>
-        <view contentMode="scaleToFill" id="Ac3-9l-5ee">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-            <point key="canvasLocation" x="443" y="210"/>
-        </view>
     </objects>
 </document>
